small correction to improve UX	on mobile phones

--- a/css/styles.css
+++ b/css/styles.css
@@ -308,9 +308,7 @@ box-shadow: 0px 3px 4px 0px rgba(50, 50, 50, 0.38);
 }
 .banner-content h2 {
 	color: #fff;
-	font-size: 3.5em;
-	/*margin: 2% 0 30px;*/
-	line-height: 1.2em;
+	font-size: 36pt;
 }
 .banner-content p {
 	font-size: 1.6em;
@@ -319,7 +317,7 @@ box-shadow: 0px 3px 4px 0px rgba(50, 50, 50, 0.38);
 }
 .banner-content header {
 color: #fff;
-padding-top: 200px;
+padding-top: 8em;
 }
 .banner-content .btn {
 text-align:center;
@@ -388,7 +386,6 @@ float: none;
 .title {
 margin-left: 10px;
 align: left;
-width: 60%;
 }
 
 .heroText {
